# aegis

./: .gitignore  DECISION_LOG.md  README.md  alembic.ini  pyproject.toml
aegis/: cli.py  config.py  config.yaml  main.py
aegis/api/: routes_health.py
aegis/core/: context.py  fast_chain.py  intent.py  orchestrator.py
aegis/core/prompts/: routing.j2  summarization.j2  system_guest.j2  system_owner.j2
aegis/db/: database.py  models.py
aegis/db/migrations/: env.py
aegis/db/migrations/versions/: 3fb24527e249_initial_schema.py
aegis/power/: account_pool.py  model_router.py
aegis/utils/: logger.py
tests/: conftest.py  test_config.py  test_context.py  test_database.py  test_health.py  test_intent.py  test_migration_smoke.py  test_model_router.py  test_orchestrator.py
tests/data/: orchestrator_routing_cases.csv
